# peach_tree_bank

./: .gitignore  README.md  docker-compose.yml
.devcontainer/back-end-container/: devcontainer.json  docker-compose.extended.yml
.devcontainer/front-end-container/: devcontainer.json  docker-compose.extended.yml  postCreate.sh
back-end/: Dockerfile
back-end/peach_tree_bank/: README.md  pyproject.toml
back-end/peach_tree_bank/src/: main.py
back-end/peach_tree_bank/src/api/: app.py  utils.py
back-end/peach_tree_bank/src/api/models/: models_transaction.py
back-end/peach_tree_bank/src/api/routes/: authotization.py  transactions.py
back-end/peach_tree_bank/src/database/: models.py  utils.py
front-end/: Dockerfile
front-end/peach-tree-bank/: README.md  angular.json  package-lock.json  package.json
front-end/peach-tree-bank/src/: App.vue
front-end/peach-tree-bank/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts  token-interceptor.ts
front-end/peach-tree-bank/src/app/components/log-in-view/: log-in-view.html  log-in-view.spec.ts  log-in-view.ts
front-end/peach-tree-bank/src/app/components/transaction-details/: transaction-details.html  (+1 more)
front-end/peach-tree-bank/src/app/models/: login.ts  transaction.ts
front-end/peach-tree-bank/src/app/services/: transactions-state-service.ts
front-end/peach-tree-bank/src/components/: NavBar.vue
front-end/peach-tree-bank/src/router/: index.ts
front-end/peach-tree-bank/src/views/: HomeView.vue  LogInView.vue
front-end/peach-tree-front-end/: README.md  package-lock.json  package.json
(+4 files in other folders)
