[project]
name = "peach-tree-bank"
version = "0.1.0"
description = "Peach Tree Bank back-end service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "ruff>=0.12.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
